--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -1,10 +1,3 @@
-.modal__option{
-    cursor: pointer;
-    padding: 1rem;
-}
-.modal__option:hover{
-    background:sandybrown;
-}
 .backdrop{
     display: none;
     position: fixed;
@@ -13,9 +6,16 @@
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 200;
 }
+.modal__option{
+    cursor: pointer;
+    padding: 1rem;
+}
+.modal__option:hover{
+    background:sandybrown;
+}
 .modal-container{
     z-index: 300;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate( -50%, -50%)
@@ -24,4 +24,11 @@
 .modal__content{
     max-height: 80vh;
     overflow: auto;
+}
+
+@media(max-width: 900px){
+    .modal-container{
+        width: 90%;
+        height: 80vh;
+    }
 }
