--- a/src/Components/ControlBlock/ControlBlock.css
+++ b/src/Components/ControlBlock/ControlBlock.css
@@ -32,9 +32,11 @@
         width: 100%;
     }
     .header{
+        width: 100%;
         height: 18vh;
     }
     .control_pannel__list{
         width: 100%;
+        display: none;
     }
 }
