--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -4,22 +4,27 @@
     position: absolute;
     right:1rem;
 }
+.search-btn{
+    display: none;
+}
 
 @media(max-width: 900px){
-    .search{
-        display: none;
-        top:0;
-        right:0;
+    .search-container{
+        display: flex;
         position: relative;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+    .search{
+        position: static;
         transform: translate(0, 0);
     }
-    /* .search-container::before{
-         content: 'Search'
+    .search__input{
+        padding: 1rem;
     }
-    .search-container:hover .search{
-        display: block;
+    .search__btn{
+        padding: 1rem;
     }
-    .search-container:hover .search-container::before{
-        content: normal;
-    } */
 }
