Сделал смену поиска на меню по нажатии кнопки

--- a/src/Components/CurrentWeather/CurrentWeather.css
+++ b/src/Components/CurrentWeather/CurrentWeather.css
@@ -78,5 +78,11 @@
     .weather__column{
         margin:0;
         width: 100%;
+        display: flex;
+        flex-direction:  column;
+        align-items: center;
+    }
+    .weather__temperature{
+        text-align: center;
     }
 }
