--- a/src/Components/ControlBlock/ControlBlock.css
+++ b/src/Components/ControlBlock/ControlBlock.css
@@ -39,4 +39,11 @@
         width: 100%;
         display: none;
     }
+    .control_pannel{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .control_pannel__btn{
+        font-size: 0.7rem;
+    }
 }
