Улучшил дизайн меню в мобильной версии. Адаптивное меню готово

--- a/src/Components/ControlBlock/SliderMenu/SliderMenu.css
+++ b/src/Components/ControlBlock/SliderMenu/SliderMenu.css
@@ -7,7 +7,7 @@
 
 @media(max-width: 900px) {
     .slider-menu-btn{
-        display: block;
+        display: flex;
     }
     .slider-menu{
         width: 80%;
