--- a/src/Components/ControlBlock/ControlBlock.css
+++ b/src/Components/ControlBlock/ControlBlock.css
@@ -1,7 +1,7 @@
 .header{
     /* padding: 1rem; */
     height: 12vh;
-    background:brown;
+    background: brown;
     color: white;
     position: relative;
     display: flex;
@@ -21,7 +21,11 @@
 }
 .control_pannel__btn:hover{
     background: white;
-    color: brown;
+    color: #666;
+}
+.control_pannel__icon{
+    width: 3rem;
+    display: none;
 }
 
 @media(max-width: 900px){
@@ -32,6 +36,7 @@
         width: 100%;
     }
     .header{
+        background: #f9f9f9;
         width: 100%;
         height: 18vh;
     }
@@ -44,6 +49,22 @@
         justify-content: space-evenly;
     }
     .control_pannel__btn{
-        font-size: 0.7rem;
+        border: none;
+        min-width: 4rem;
+        padding: 0.5rem;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        background: #f9f9f9;
+        font-size: 0.6rem;
+        color: #666;
+    }
+    .control_pannel__btn:hover{
+        background: white;
+    }
+    .control_pannel__icon{
+        width: 1.5rem;
+        display: block;
+        margin-bottom: 0.5rem;
     }
 }
